# Financial_Document_Analyzer

./: .env.production  .gitignore  API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  PERFORMANCE_IMPROVEMENTS.md  PERFORMANCE_MONITORING.md  README.md  Status_of_project.md  agents.py  agents_with_observability.py  auth.py  auth_middleware.py  database.py  docker-compose.prod.yml  file_manager.py  financial_analyzer.db  financial_analyzer.db-shm  financial_analyzer.db-wal  financial_document_analyzer_demo.ipynb  llm_observability.py  main.py  migrate_auth_schema.py  models.py  production_database.py  project_report.txt  pyproject.toml  requirement_new.txt  requirements.txt  services.py  status.md  task.py  test_analysis.sh  tools.py
backend/auth/: auth.py  auth_middleware.py
backend/core/: agents.py  database.py  production_database.py  task.py
backend/models/: models.py
backend/services/: services.py
backend/utils/: file_manager.py  redis_cache.py  tools.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.tsx  api.ts  index.css  types.ts
frontend/src/components/: AnalysisHistory.tsx  AnalysisResults.tsx  Analytics.tsx  Auth.tsx  AuthDemo.tsx  AuthEmailVerification.tsx  AuthEnhanced.tsx  AuthIntegration.tsx  AuthPasswordReset.tsx  AuthProfileManagement.tsx  Documents.tsx  FileUpload.tsx  Header.tsx  IntegratedHeader.tsx  Navigation.tsx  Toast.tsx
frontend/src/components/analysis/: AnalysisHistory.tsx  AnalysisResults.tsx  Analytics.tsx  Documents.tsx  (+1 more)
(+11 files in other folders)
