[project]
name = "wingily-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai==0.130.0",
    "crewai-tools>=0.47.1",
    "ipykernel>=6.30.1",
    "pip==24.0",
    "python-magic==0.4.27",
    "python-multipart==0.0.20",
    "setuptools==65.5.0",
]
